--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,3 +5,4 @@ set(CMAKE_CXX_STANDARD 20)
 
 add_executable(HelloWorld HelloWorld.cpp)
 add_executable(Sorting Sorting.cpp)
+add_executable(LinearList LinearList.cpp)
